[#PE-718] Fixed some issues (#6)
